--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Portfolio.</div>
+        <div class="logo"> SR Portfolio.</div>
         <div class="nav-links">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
